# Smartflie

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
assets/MacOS/: Info.plist
assets/linux/: SmartFileOrganizer.desktop
src/: main.cpp
src/ai/: LlamaEngine.cpp
src/core/: DocumentParser.cpp  DocumentParser.h  TagManager.cpp  TagManager.h
src/gui/: MainWindow.cpp  MainWindow.h
